fix: complete inventory expiry order and preorder release flows